# zammad-reporting-toolkit

./: LICENSE  README.md  extraer_tickets.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_metrics.py
